Fixing bug on mobile

--- a/styles.css
+++ b/styles.css
@@ -14,37 +14,43 @@
 
 /* media queries */
 /* X-Small devices (portrait phones, less than 576px) */
-@media (min-width: 576px) {
+@media screen and (max-width: 600px) {
   .tech-icon, .description p, .third-section{
-    font-size: 0.25rem;
+    font-size: 0.75rem !important;
+  }
+}
+
+@media screen and (min-width: 600px) {
+  .tech-icon, .description p, .third-section{
+    font-size: 0.75rem !important;
   }
 }
 
 /* Small devices (landscape phones, less than 768px) */
-@media (min-width: 768px) {
+@media screen and (min-width: 768px) {
   .tech-icon, .description p, .third-section{
-    font-size: .5rem;
+    font-size: 1rem !important;
   }
 }
 
 /* Medium devices (tablets, less than 992px) */
-@media (min-width: 992px) {
+@media screen and (min-width: 992px) {
   .tech-icon, .description p, .third-section{
-    font-size: .75rem;
+    font-size: 1rem !important;
   }
 }
 
 /* Large devices (desktops, less than 1200px) */
-@media (min-width: 1200px) {
+@media screen and (min-width: 1200px) {
   .tech-icon, .description p{
-    font-size: 1.25rem;
+    font-size: 1.25rem !important;
   }
 }
 
 /* X-Large devices (large desktops, less than 1400px) */
-@media (min-width: 1400px) {
+@media screen and (min-width: 1400px) {
   .tech-icon, .description p{
-    font-size: 1.5rem;
+    font-size: 1.5rem !important;
   }
 }
 
